[package]
name = "slower-than-sound"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy-prototype-parallax = { git = "https://github.com/btrepp/bevy-prototype-parallax", branch = "main" }